edit html and css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev Ⅱ - Week 1</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Jeongyeon Yim</title>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Web Dev Ⅱ</h1>
+        <h1>Jeongyeon Yim</h1>
+        <img src="images/YIM.jpg" alt="YIM">
+        <p>Passionate and enthusiastic lifelong learner who is motivated by curiosity, and enjoys new experiences with a positive attitude. Analytical problem solver with an objective point of view and an inventive way of thinking who finds effective solutions. Well-organized and dedicated team player, as well as a cooperative leader and skillful supporter.</p><br>
+        <p>Growing up with music, such as playing the piano and violin, but also interested in visual arts such as fine arts, design, and media arts. Being inspired a lot by travelling around the world and having different cultural experiences to see the world more broadly with open-mindedness and flexibility.</p>
+        <dl>
+            <dt>Program</dt>
+            <dl>Interactive Media Design</dl>
+
+            <dt>Course</dt>
+            <dl>MTM6201 - Web Development Ⅱ</dl>
+
+            <dt>Hobbies</dt>
+            <dl>Traveling, Taking photos</dl>
+        </dl>
     </div>
 </body>
 </html>
